feat: 重構設定頁面為雙欄卡片式佈局並新增本地模組管理功能
- 重寫設定邏輯和解藕
- 將設定頁面改為左右雙欄 Grid 佈局（基本設定/檔案設定 vs 本地化/高級設定）
- 新增四大主題卡片：🎮 基本設定、📁 檔案設定、🌐 本地化設定、🔧 高級設定
- 實作即時路徑驗證與視覺化狀態指示（✓/✗ 圖示與顏色提示）
- 新增拖放支援至遊戲路徑輸入框（GamePathTextBox_Drop/DragEnter）

--- a/Resources/Resources.en-US.resx
+++ b/Resources/Resources.en-US.resx
@@ -44,7 +44,10 @@
     <value>⚙️ Config Path:</value>
   </data>
   <data name="AutoDetectPaths" xml:space="preserve">
-    <value>🔍 Auto-detect RimWorld Paths</value>
+    <value>🔄 Rederive Paths</value>
+  </data>
+  <data name="ManualSave" xml:space="preserve">
+    <value>💾 Manual Save Settings</value>
   </data>
   
   <!-- ModsConfig Settings -->
